V4.2.1 (in progress)
[BUG] : Correct a bug in users groups rights for rows and templates
[BUG] : Correct a bug in wysiwyg toolbar deletion
[BUG] : Correct a bug in HTML compression (caused by a notice in generated content)
[BUG] : Correct a bug in user session
[REFACTOR] : Update codemirror to version 2.2.1
[REFACTOR] : Optimize all images used in Automne
[REFACTOR] : Replace fckeditor with ckeditor version 3.6.2 in block text and polymod
[REFACTOR] : Remove deprecated parameter ALLOW_IMAGES_IN_WYSIWYG
[FEATURE] : Add user logs in alias module

V4.2.0 (15/02/2012)
[BUG] : Correct bug number: 2350, 2549, 2561, 2586, 2585, 2584, 2582, 2566, 2672, 2689, 2751, 2754, 2763, 2764, 2818, 2831 (see http://www.automne-cms.org/bug/)
[BUG] : Admin lock cannot be removed, even with admin rights
[BUG] : Polymod modules can be deleted even if RSS feeds or plugins exists
[BUG] : Polymod blocks are not duplicated during page copy
[REFACTOR] : Drop all old V3 LDAP methods
[REFACTOR] : Update Zend Framework to version 1.11.5
[REFACTOR] : Update ExtJS to version 3.4.0 (add support for IE9)
[REFACTOR] : Update debug statistics : more accurate and more extensible
[REFACTOR] : Session management and users authentification are completely refactored to use Zend Framework
[REFACTOR] : Add support for hidden fields in polymod am-form
[REFACTOR] : Add filter by dates on activity logs
[REFACTOR] : Update page codename to allow codenames of 100 characters
[REFACTOR] : Add an administration right to allow update of pages codenames without a right on pages/rows templates
[REFACTOR] : Add thumbnail to field google coordinates in modules admin
[REFACTOR] : Refactor tag atm-xml to be used in rows and in page templates
[REFACTOR] : Images and files inserted into polymod fields now use correct website domain instead of main website domain
[REFACTOR] : Add title and company to users details
[REFACTOR] : Add log for user logout
[REFACTOR] : Add previous login message on connection