@@ -1,4 +1,5 @@
 V4.2.1 (in progress)
+[BUG] : Correct bug number: 2864, 2939, 2954 (see http://www.automne-cms.org/bug/)
 [BUG] : Correct a bug in users groups rights for rows and templates
 [BUG] : Correct a bug in wysiwyg toolbar deletion
 [BUG] : Correct a bug in HTML compression (caused by a notice in generated content)
